// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-avatar ant-avatar-circle"
    style={Object {}}
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      D
    </span>
  </span>
</div>
`;

exports[`Storyshots Avatar Icon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-avatar ant-avatar-circle ant-avatar-icon"
    style={Object {}}
  >
    <svg
      className=""
      fill="#7E7F86"
      height={32}
      width={32}
    >
      dassana.svg
    </svg>
  </span>
</div>
`;

exports[`Storyshots Banner Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-5 container-d0-0-2-14"
    >
      <div
        className="headerContainer-0-2-8"
      >
        <div
          className="header-0-2-7"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 icon-0-2-9 error-0-2-6"
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="title-0-2-12"
          >
            Error
          </div>
        </div>
        <span
          className="iconButton-0-2-19 closeBtn-0-2-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d2-0-2-24"
            data-icon="times"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div>
        Once we receive an alert we scan it against policy risk rules. The rules are evaluated in order from top to bottom. The first rule that matches determines the risk of the alert. Updating a rule will not impact the past alerts. However you can use past alerts as a reference to edit rules such that future alerts get your desired risk classification.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Banner Info 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-5 container-d1-0-2-25"
    >
      <div
        className="headerContainer-0-2-8"
      >
        <div
          className="header-0-2-7"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-exclamation-circle fa-w-16 icon-0-2-9 info-0-2-10"
            data-icon="exclamation-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="title-0-2-12"
          >
            Info
          </div>
        </div>
        <span
          className="iconButton-0-2-19 closeBtn-0-2-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d5-0-2-28"
            data-icon="times"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div>
        Once we receive an alert we scan it against policy risk rules. The rules are evaluated in order from top to bottom. The first rule that matches determines the risk of the alert. Updating a rule will not impact the past alerts. However you can use past alerts as a reference to edit rules such that future alerts get your desired risk classification.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Banner No Icon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-5 container-d4-0-2-37"
    >
      <div
        className="headerContainer-0-2-8"
      >
        <div
          className="header-0-2-7"
        >
          <div
            className="title-0-2-12"
          >
            Policy Risk Rules
          </div>
        </div>
        <span
          className="iconButton-0-2-19 closeBtn-0-2-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d14-0-2-40"
            data-icon="times"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div>
        Once we receive an alert we scan it against policy risk rules. The rules are evaluated in order from top to bottom. The first rule that matches determines the risk of the alert. Updating a rule will not impact the past alerts. However you can use past alerts as a reference to edit rules such that future alerts get your desired risk classification.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Banner Success 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-5 container-d2-0-2-29"
    >
      <div
        className="headerContainer-0-2-8"
      >
        <div
          className="header-0-2-7"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check-circle fa-w-16 icon-0-2-9 success-0-2-11"
            data-icon="check-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="title-0-2-12"
          >
            Success
          </div>
        </div>
        <span
          className="iconButton-0-2-19 closeBtn-0-2-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d8-0-2-32"
            data-icon="times"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div>
        Once we receive an alert we scan it against policy risk rules. The rules are evaluated in order from top to bottom. The first rule that matches determines the risk of the alert. Updating a rule will not impact the past alerts. However you can use past alerts as a reference to edit rules such that future alerts get your desired risk classification.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Banner Warning 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-5 container-d3-0-2-33"
    >
      <div
        className="headerContainer-0-2-8"
      >
        <div
          className="header-0-2-7"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-exclamation-triangle fa-w-18 icon-0-2-9 warning-0-2-13"
            data-icon="exclamation-triangle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="title-0-2-12"
          >
            Warning
          </div>
        </div>
        <span
          className="iconButton-0-2-19 closeBtn-0-2-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d11-0-2-36"
            data-icon="times"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div>
        Once we receive an alert we scan it against policy risk rules. The rules are evaluated in order from top to bottom. The first rule that matches determines the risk of the alert. Updating a rule will not impact the past alerts. However you can use past alerts as a reference to edit rules such that future alerts get your desired risk classification.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Default
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-41 container-d0-0-2-42"
  >
     
  </span>
</div>
`;

exports[`Storyshots Button Pending 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <div
        className="ant-spin ant-spin-spinning"
      >
        <span
          aria-label="loading"
          className="anticon anticon-loading anticon-spin loading-0-2-43 loading-d0-0-2-44 ant-spin-dot"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </div>
    </span>
    <span>
      Pending
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Default Checked 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox ant-checkbox-checked"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled Checked 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Label 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
    <span>
      Checkbox
    </span>
  </label>
</div>
`;

exports[`Storyshots ChipInput Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-48"
    >
      <input
        autoFocus={false}
        className="ant-input container-0-2-50 container-d0-0-2-52"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="@yourdomain.com"
        type="text"
        value=""
      />
    </div>
    <div
      className="tagsWrapper-0-2-47 tagsWrapper-d0-0-2-49"
    >
      <span
        className="ant-tag tag-0-2-46"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-2-46"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-2-53 container-d0-0-2-54"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-48"
    >
      <input
        autoFocus={false}
        className="ant-input container-0-2-50 container-d1-0-2-56"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="tagsWrapper-0-2-47 tagsWrapper-d1-0-2-55"
    />
    <div
      className="container-0-2-53 container-d1-0-2-57"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-48"
    >
      <div
        className="container-0-2-63 container-d0-0-2-65"
      >
        <div
          className="inputSkeleton-0-2-64"
        >
          <span
            className="container-0-2-41 container-d1-0-2-66"
          >
             
          </span>
        </div>
      </div>
    </div>
    <div
      className="tagsWrapper-0-2-47 tagsWrapper-d3-0-2-61"
    >
      <span
        className="container-0-2-41 container-d2-0-2-67"
      >
         
      </span>
      <span
        className="container-0-2-41 container-d3-0-2-68 skeleton-0-2-45"
      >
         
      </span>
    </div>
    <div
      className="container-0-2-53 container-d3-0-2-69"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Validated With Addon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-2-48"
    >
      <span
        className="ant-input-group-wrapper container-0-2-50 container-d2-0-2-59"
      >
        <span
          className="ant-input-wrapper ant-input-group"
        >
          <span
            className="ant-input-group-addon"
          >
            @
          </span>
          <input
            autoFocus={false}
            className="ant-input"
            data-test="input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="yourdomain.com"
            style={null}
            type="text"
            value=""
          />
        </span>
      </span>
    </div>
    <div
      className="tagsWrapper-0-2-47 tagsWrapper-d2-0-2-58"
    >
      <span
        className="ant-tag tag-0-2-46"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-2-46"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-2-53 container-d2-0-2-60"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Code Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d4-0-2-71 search-0-2-70"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Search..."
    type="text"
    value=""
  />
  <pre
    className="line-numbers"
    contentEditable={false}
  >
    <code
      className="language-json"
    >
      {
	"dassana": {
		"context": {
			"attachedResources": {
				"count-of-attached-eni": 3,
				"does-any-eni-have-public-ip": true,
				"are-there-flows-from-internet-in-vpcflows": false
			}
		}
	},
	"resourceConfig": {
		"configuration": {
			"description": "ssh-from-world",
			"groupName": "prod-cache",
			"ipPermissions": [
				{
					"fromPort": 22,
					"ipProtocol": "tcp",
					"ipv6Ranges": [
						{
							"cidrIpv6": "::/0"
						}
					],
					"prefixListIds": [],
					"toPort": 22,
					"userIdGroupPairs": [],
					"ipv4Ranges": [
						{
							"cidrIp": "0.0.0.0/0"
						}
					]
				}
			]
		}
	}
}
    </code>
  </pre>
</div>
`;

exports[`Storyshots Code HTML 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d5-0-2-72 search-0-2-70"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <pre
    className="line-numbers"
    contentEditable={false}
  >
    <code
      className="language-html"
    >
      &lt;div&gt;
  &lt;p&gt;Lorem Ipsum&lt;/p&gt;
  &lt;span&gt;dolor sit amet&lt;/span&gt;
&lt;/div&gt;
    </code>
  </pre>
</div>
`;

exports[`Storyshots ColoredDot Colored 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-73"
  >
    <p>
      Hover over colored dot to show tooltip.
    </p>
    <span
      className="coloredDot-0-2-75 dot-0-2-74"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Icon Custom 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <img
    alt=""
    className=""
    height={64}
    src="https://dummyimage.com/600x400/000/fff&text=Dassana"
  />
</div>
`;

exports[`Storyshots Icon Predefined 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <svg
    className=""
    fill="#7E7F86"
    height={64}
    width={64}
  >
    dassana.svg
  </svg>
</div>
`;

exports[`Storyshots IconButton Circle 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="circle-0-2-15 circle-d18-0-2-79 iconButton-0-2-19 hasBorder-0-2-17 hasBorder-d19-0-2-80"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d20-0-2-81"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots IconButton Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="iconButton-0-2-19"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d17-0-2-78"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots IconButton Pending 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="circle-0-2-15 circle-d21-0-2-82 disabled-0-2-16 iconButton-0-2-19 hasBorder-0-2-17 hasBorder-d22-0-2-83"
    onClick={[Function]}
  >
    <span
      className="pending-0-2-20"
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-2-18 icon-d23-0-2-84"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Input Addons 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-input-group-wrapper container-0-2-50 container-d12-0-2-93"
  >
    <span
      className="ant-input-wrapper ant-input-group"
    >
      <span
        className="ant-input-group-addon"
      >
        @
      </span>
      <input
        autoFocus={false}
        className="ant-input"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="yourdomain"
        style={null}
        type="text"
        value=""
      />
      <span
        className="ant-input-group-addon"
      >
        .com
      </span>
    </span>
  </span>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d6-0-2-85"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input ant-input-disabled container-0-2-50 container-d11-0-2-92"
    data-test="input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d10-0-2-91 error-0-2-51"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d9-0-2-90"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-63 container-d1-0-2-88"
  >
    <div
      className="inputSkeleton-0-2-64"
    >
      <span
        className="container-0-2-41 container-d4-0-2-89"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Placeholder 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <input
    autoFocus={false}
    className="ant-input container-0-2-50 container-d7-0-2-86"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Search..."
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Link Click 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <a
    className="ant-typography"
    data-test="link"
    onClick={[Function]}
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
    target="_self"
  >
    <u>
      Click
    </u>
  </a>
</div>
`;

exports[`Storyshots Link Href 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <a
    className="ant-typography"
    data-test="link"
    href=" "
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
    target="_self"
  >
    <u>
      Href
    </u>
  </a>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`Storyshots MultipleChoice Multiple 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-95 heading-d1-0-2-98"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-96 info-d2-0-2-99"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-94 eventTarget-d0-0-2-97"
    tabIndex={0}
  >
    <div
      className="container-0-2-100 container-d0-0-2-101"
    >
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d0-0-2-108"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          A
        </div>
        <span
          className="label-0-2-106"
        >
          CISO
        </span>
      </div>
      <div
        className="activeItem-0-2-102 multipleChoiceItem-0-2-107 multipleChoiceItem-d1-0-2-109"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          B
        </div>
        <span
          className="label-0-2-106"
        >
          Sr Leadership
        </span>
        <span
          className="checkmark-0-2-103"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d2-0-2-110"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          C
        </div>
        <span
          className="label-0-2-106"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d3-0-2-111"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          D
        </div>
        <span
          className="label-0-2-106"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="activeItem-0-2-102 multipleChoiceItem-0-2-107 multipleChoiceItem-d4-0-2-112"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          E
        </div>
        <span
          className="label-0-2-106"
        >
          DevOps
        </span>
        <span
          className="checkmark-0-2-103"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d5-0-2-113"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          F
        </div>
        <span
          className="label-0-2-106"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d6-0-2-114"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          G
        </div>
        <span
          className="label-0-2-106"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d7-0-2-115"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          H
        </div>
        <span
          className="label-0-2-106"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d8-0-2-116"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          I
        </div>
        <span
          className="label-0-2-106"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultipleChoice Single 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-95 heading-d4-0-2-118"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-96 info-d5-0-2-119"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-94 eventTarget-d3-0-2-117"
    tabIndex={0}
  >
    <div
      className="container-0-2-100 container-d1-0-2-120"
    >
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d9-0-2-121"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          A
        </div>
        <span
          className="label-0-2-106"
        >
          CISO
        </span>
      </div>
      <div
        className="activeItem-0-2-102 multipleChoiceItem-0-2-107 multipleChoiceItem-d10-0-2-122"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          B
        </div>
        <span
          className="label-0-2-106"
        >
          Sr Leadership
        </span>
        <span
          className="checkmark-0-2-103"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d11-0-2-123"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          C
        </div>
        <span
          className="label-0-2-106"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d12-0-2-124"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          D
        </div>
        <span
          className="label-0-2-106"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d13-0-2-125"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          E
        </div>
        <span
          className="label-0-2-106"
        >
          DevOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d14-0-2-126"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          F
        </div>
        <span
          className="label-0-2-106"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d15-0-2-127"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          G
        </div>
        <span
          className="label-0-2-106"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d16-0-2-128"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          H
        </div>
        <span
          className="label-0-2-106"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d17-0-2-129"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          I
        </div>
        <span
          className="label-0-2-106"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultipleChoice Single Column 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <h3
    className="heading-0-2-95 heading-d7-0-2-131"
  >
    Click on the bordered box to use keyboard shortcuts
  </h3>
  <p
    className="info-0-2-96 info-d8-0-2-132"
  >
    Press Up, Down, Left, Right arrow keys to navigate. Press enter or alphabet keys to select/deselect.
  </p>
  <div
    className="eventTarget-0-2-94 eventTarget-d6-0-2-130"
    tabIndex={0}
  >
    <div
      className="container-0-2-100 container-d2-0-2-133"
    >
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d18-0-2-134"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          A
        </div>
        <span
          className="label-0-2-106"
        >
          SecOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d19-0-2-135"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          B
        </div>
        <span
          className="label-0-2-106"
        >
          Cloud Architect
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d20-0-2-136"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          C
        </div>
        <span
          className="label-0-2-106"
        >
          DevOps
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d21-0-2-137"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          D
        </div>
        <span
          className="label-0-2-106"
        >
          NetSec
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d22-0-2-138"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          E
        </div>
        <span
          className="label-0-2-106"
        >
          AppDev
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d23-0-2-139"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          F
        </div>
        <span
          className="label-0-2-106"
        >
          Compliance
        </span>
      </div>
      <div
        className="multipleChoiceItem-0-2-107 multipleChoiceItem-d24-0-2-140"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        tabIndex={-1}
      >
        <div
          className="key-0-2-105"
        >
          G
        </div>
        <span
          className="label-0-2-106"
        >
          Other
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <div
    className="container-0-2-141"
  />
</div>
`;

exports[`Storyshots Notification Info 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <div
    className="container-0-2-141"
  />
</div>
`;

exports[`Storyshots Notification Success 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <div
    className="container-0-2-141"
  />
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <div
    className="container-0-2-141"
  />
</div>
`;

exports[`Storyshots Notifications Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Info 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Success 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Warning 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    autoFocus={false}
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
</div>
`;

exports[`Storyshots PageLoader Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-142"
  >
    <svg>
      loading_lightbulb.svg
    </svg>
  </div>
</div>
`;

exports[`Storyshots Popover Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Popover Title 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Radio Group Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio Group Loading 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="container-0-2-143"
  >
    <div
      className="skeletonButton-0-2-145"
    >
      <span
        className="container-0-2-41 container-d5-0-2-146 skeleton-0-2-144"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-2-145"
    >
      <span
        className="container-0-2-41 container-d6-0-2-147 skeleton-0-2-144"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-2-145"
    >
      <span
        className="container-0-2-41 container-d7-0-2-148 skeleton-0-2-144"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Group Partially Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        className="ant-radio-button ant-radio-button-disabled"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={true}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots SVGImage Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <svg
    height="100%"
    width="100%"
  >
    aws.svg
  </svg>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-149 container-d0-0-2-153"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Full Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-149 container-d2-0-2-159"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-2-156"
              style={Object {}}
            >
              <span
                className="optionText-0-2-157"
                onMouseEnter={[Function]}
              >
                Lorem
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Icon 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-149 container-d1-0-2-154"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-2-156"
              style={Object {}}
            >
              <span
                className="icon-0-2-155"
              >
                <svg
                  className=""
                  fill="#7E7F86"
                  height={15}
                  width={15}
                >
                  aws.svg
                </svg>
              </span>
              <span
                className="optionText-0-2-157"
                onMouseEnter={[Function]}
              >
                AWS
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Search 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-149 container-d3-0-2-160"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Selected Option Width 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="container-0-2-149 container-d4-0-2-161"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              autoFocus={false}
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-165"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-166"
    >
      <span
        className="label-0-2-164"
      >
        press 
      </span>
      <span
        className="keyName-0-2-163"
      >
        enter 
      </span>
      <span
        className="icon-0-2-162"
      >
        ↵
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Icon Only 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-165"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-166"
    >
      <span
        className="label-0-2-164"
      >
        press 
      </span>
      <span
        className="icon-0-2-162"
      >
        ⌘
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Mixed 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-165"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-166"
    >
      <span
        className="label-0-2-164"
      >
        press 
      </span>
      <span
        className="keyName-0-2-163"
      >
        cmd 
      </span>
      <span
        className="icon-0-2-162"
      >
        ⌘
      </span>
      <span>
         + 
      </span>
      <span
        className="keyName-0-2-163"
      >
        Enter 
      </span>
      <span
        className="icon-0-2-162"
      >
        <span
          aria-label="enter"
          className="anticon anticon-enter"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="enter"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShortcutMicrocopy Predefined Keys 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="shortcutMicrocopy-0-2-165"
    data-test="shortcut-microcopy"
  >
    <div
      className="wrapper-0-2-166"
    >
      <span
        className="label-0-2-164"
      >
        press 
      </span>
      <span
        className="keyName-0-2-163"
      >
        cmd 
      </span>
      <span
        className="icon-0-2-162"
      >
        ⌘
      </span>
      <span>
         + 
      </span>
      <span
        className="keyName-0-2-163"
      >
        enter 
      </span>
      <span
        className="icon-0-2-162"
      >
        ↵
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Circle 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-41 container-d9-0-2-168"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Count 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-41 container-d10-0-2-169"
  >
     
  </span>
  <span
    className="container-0-2-41 container-d10-0-2-169"
  >
     
  </span>
  <span
    className="container-0-2-41 container-d10-0-2-169"
  >
     
  </span>
  <span
    className="container-0-2-41 container-d10-0-2-169"
  >
     
  </span>
  <span
    className="container-0-2-41 container-d10-0-2-169"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="container-0-2-41 container-d8-0-2-167"
  >
     
  </span>
</div>
`;

exports[`Storyshots Tabs Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className=""
  >
    <div
      className="tabsList-0-2-171"
    >
      <li
        className="tab-0-2-173 activeTab-0-2-172"
        onClick={[Function]}
      >
        Foo
      </li>
      <li
        className="tab-0-2-173"
        onClick={[Function]}
      >
        Bar
      </li>
    </div>
    <div
      className="tabPane-0-2-170"
    >
      <div
        className="tabPane-0-2-174"
      >
        Foo content text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Colored 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-tag ant-tag-has-color"
    style={
      Object {
        "backgroundColor": "#108ee9",
      }
    }
  >
    Colored
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots Tag Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <span
    className="ant-tag"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    Default
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots TimeInput Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="ant-picker ant-picker-disabled"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Error 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="ant-picker error-0-2-176"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Hours 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="ant-picker"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeInput Placeholder 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    className="decorator-0-2-3"
  >
    <div
      className="ant-picker"
      onMouseUp={[Function]}
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-test="time-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder="Select time"
          readOnly={true}
          size={10}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="clock-circle"
            className="anticon anticon-clock-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="clock-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-disabled"
    data-test="toggle"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Small 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-small"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  className="light storyWrapper-0-2-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="tooltip-trigger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className=""
        fill="#7E7F86"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;
